--- a/app/src/main/res/layout/activity_specific_restaurant.xml
+++ b/app/src/main/res/layout/activity_specific_restaurant.xml
@@ -19,11 +19,22 @@
             android:layout_height="250dp"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/restaurantImg"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/default_image" />
+                android:layout_height="match_parent">
+                <ImageView
+                    android:id="@+id/restaurantImg"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/default_image"
+                    android:scaleType = "centerCrop"/>
+                <View
+                    android:id="@+id/dark_overlay"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#990b1729" />
+
+            </FrameLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
