with user reviews

--- a/app/src/main/res/layout/activity_specific_restaurant.xml
+++ b/app/src/main/res/layout/activity_specific_restaurant.xml
@@ -139,6 +139,11 @@
         android:text="Restaurant Description"
         android:textColor="#71727A" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/reviewRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/item_review" />
 
 
 </LinearLayout>
