--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -29,16 +29,26 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/userImageView"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/circular_image"
+                    android:scaleType="centerCrop"
+                    android:clipToOutline="true"
+                    tools:srcCompat="@tools:sample/avatars" />
+
                 <TextView
-                    android:id="@+id/restaurantNameTextView"
+                    android:id="@+id/nameTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
                     android:layout_weight="1"
                     android:fontFamily="@font/inter_black"
                     android:textColor="#1F2024"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    tools:text="Restaurant Name" />
+                    tools:text="Restaurant/User Name" />
 
                 <TextView
                     android:id="@+id/reviewDate"
@@ -72,11 +82,6 @@
                 tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />
 
         </LinearLayout>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="15dp"
-            android:src="@drawable/baseline_arrow_forward_ios_24" />
     </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
