--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -10,14 +10,16 @@
     tools:context=".activities.OnboardingActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/skipTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/inter_regular"
         android:gravity="end"
         android:text="@string/skip"
         android:textColor="#535197"
-        android:textSize="15dp" />
+        android:textSize="15sp"
+        android:clickable="true"
+        android:focusable="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
