--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -49,7 +49,7 @@
                     android:textColor="#1F2024"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    tools:text="Restaurant/User Name" />
+                    tools:text="Name" />
 
                 <TextView
                     android:id="@+id/reviewDate"
@@ -57,14 +57,14 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter_regular"
                     android:textColor="#71727A"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     tools:text="mm/dd/yyyy" />
 
             </LinearLayout>
 
             <RatingBar
                 android:id="@+id/ratingBar"
-                style="?android:attr/ratingBarStyleSmall"
+                style="@style/Widget.AppCompat.RatingBar.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -77,10 +77,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:fontFamily="@font/inter_regular"
-                android:textColor="#71727A"
-                android:textSize="14sp"
                 android:layout_marginBottom="5dp"
+                android:fontFamily="@font/inter_regular"
+                android:textColor="#000000"
+                android:textSize="14sp"
                 tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />
 
             <HorizontalScrollView
@@ -97,24 +97,28 @@
                         android:layout_height="100dp"
                         android:adjustViewBounds="true"
                         android:scaleType="centerCrop"
+                        android:layout_marginEnd="8dp"
                         app:srcCompat="@drawable/default_image" />
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:adjustViewBounds="true"
                         android:scaleType="centerCrop"
+                        android:layout_marginEnd="8dp"
                         app:srcCompat="@drawable/default_image" />
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:adjustViewBounds="true"
                         android:scaleType="centerCrop"
+                        android:layout_marginEnd="8dp"
                         app:srcCompat="@drawable/default_image" />
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:adjustViewBounds="true"
                         android:scaleType="centerCrop"
+                        android:layout_marginEnd="8dp"
                         app:srcCompat="@drawable/default_image" />
                     <ImageView
                         android:layout_width="100dp"
