--- a/app/src/main/res/layout/fragment_reviews.xml
+++ b/app/src/main/res/layout/fragment_reviews.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id = "@+id/main">
+    android:id="@+id/main"
+    tools:context=".fragments.ReviewsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/userRecyclerView"
