--- a/app/src/main/res/layout/fragment_change_pass.xml
+++ b/app/src/main/res/layout/fragment_change_pass.xml
@@ -68,7 +68,7 @@
             android:hint="Confirm new password" />
 
         <Button
-            android:id="@+id/registerButton"
+            android:id="@+id/saveButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/inter_bold"
@@ -78,7 +78,7 @@
             android:text="Save Password" />
 
         <TextView
-            android:id="@+id/loginLink"
+            android:id="@+id/forgotPass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/inter_bold"
