--- a/app/src/main/res/layout/activity_add_review.xml
+++ b/app/src/main/res/layout/activity_add_review.xml
@@ -111,7 +111,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="#5652CC"
-            android:text="Submit Review" />
+            android:text="Submit Review"
+            android:onClick = "onClickSubmit"/>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
