synced the color of button to other buttons

--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -213,6 +213,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_margin="16dp"
+        android:backgroundTint="#5652CC"
         android:onClick = "onClickAddReview"
         android:padding="16dp"/>
 </RelativeLayout>
